--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 tokio = { version = "1.32.0", features = ["full"] }
 prost = "0.12"
 prost-types = "0.12"
+arboard = "3.3.0"
 
 [build-dependencies]
 prost-build = { version = "0.12" }
