refactor: Export common module in library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "chat"
+name = "messaging_playground"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,6 +15,13 @@ rusqlite = "0.30.0"
 [build-dependencies]
 prost-build = { version = "0.12" }
 
+[[bin]]
+name = "client"
+path = "src/bin/client.rs"
+
+[[bin]]
+name = "server"
+path = "src/bin/server.rs"
+
 [lib]
-name = "data_access"
-path = "data_access/mod.rs"
+path = "src/lib.rs"
